# C

./: .gitignore  CMakeLists.txt  README.md  updateGitCmakeMakeTest.sh
Mastery Quiz /week10/: q3.c  q4.c  q5.c  q6.c
Mastery Quiz /week11/: test1.c
Mastery Quiz /week12/: q2.c  q3.c  remember 
Mastery Quiz /week8/: Q1.c  Q2.c  Q3.c
Mastery Quiz /week9/: q1.c  q2.c  q3.c  q4.c  q5.c  q6.c
SelfLearning/week 9/: split.c  testSize.c
practical/Final Exam prepare/C/: Q1.c  Q2.c  Q3.c  Q4.c  Q5.c
practical/Final Exam prepare/Matlab/: Q1.m  Q2.m  Q3.m  Q4.m  Q5.m
practical/Prac Exam/: q1.c  q2.c  q3.c
practical/prac exam prac/: Q1.c  Q2.c  Q3.c
practical/week10/: odds_evens01.c  temperatures01.c  temperatures02.c
practical/week10/Test/: odds_evens02.txt  temperatures01.txt  temperatures02.txt
practical/week8/: digits.c  education.c  err1.c  err2.c  err3.c  form_letter.c  months.c  temp.c
practical/week8/test/: digits.txt  education.txt  form_letter.txt  months.txt  temp.txt
practical/week9/: odd_evens.c  process_ages.c  reverse_in_place.c  to_uppercase.c  to_uppercase2.c
practical/week9/Test/: odd_evens.txt  process_ages.txt  reverse_in_place.txt  to_uppercase.txt  to_uppercase2.txt
workshop/week 11/: q1.c  q2.c  q3.c  q4.c
workshop/week10/: q1_read_cat.c  q2_read_cat_repeat.c  q3_digest.c  q4_digest_back.c
workshop/week12/: Q1.c  Q2.c  Q3.c
workshop/week8/: q4.c  q5.c
workshop/week9/: peaks.c  split.c  split1.c  sumdiffs.c
