cmake_minimum_required(VERSION 3.10)
project(C C)

set(CMAKE_C_STANDARD 99)

#add_executable(C main.c)

#workshop week 8
#add_executable(q4 workshop/week8/q4.c)
#add_executable(q5 workshop/week8/q5.c)

#practical week 8
#add_executable(err1 practical/week8/err1.c)
#add_executable(err2 practical/week8/err2.c)
#add_executable(err3 practical/week8/err3.c)
#add_executable(temp practical/week8/temp.c)
#add_executable(form_letter practical/week8/form_letter.c)
#add_executable(digits practical/week8/digits.c)
#add_executable(education practical/week8/education.c)
#add_executable(months practical/week8/months.c)

#mastery quiz week 8
#add_executable(Q1 "Mastery Quiz /week8/Q1.c")
#add_executable(Q2 "Mastery Quiz /week8/Q2.c")
#add_executable(Q3 "Mastery Quiz /week8/Q3.c")

#lecture week 9
#add_executable(testSize "SelfLearning/week 9/testSize.c")
#add_executable(split "SelfLearning/week 9/split.c")

#workshop week 9

add_executable(peaks workshop/week9/peaks.c)
add_executable(split workshop/week9/split.c)
add_executable(split1 workshop/week9/split1.c)
add_executable(sumdiffs workshop/week9/sumdiffs.c)