cmake_minimum_required(VERSION 3.10)
project(C C)

set(CMAKE_C_STANDARD 99)
add_definitions(-Wall)

#add_executable(C main.c)

#workshop week 8
#add_executable(q4 workshop/week8/q4.c)
#add_executable(q5 workshop/week8/q5.c)

#practical week 8
#add_executable(err1 practical/week8/err1.c)
#add_executable(err2 practical/week8/err2.c)
#add_executable(err3 practical/week8/err3.c)
#add_executable(temp practical/week8/temp.c)
#add_executable(form_letter practical/week8/form_letter.c)
#add_executable(digits practical/week8/digits.c)
#add_executable(education practical/week8/education.c)
#add_executable(months practical/week8/months.c)

#mastery quiz week 8
#add_executable(Q1 "Mastery Quiz /week8/Q1.c")
#add_executable(Q2 "Mastery Quiz /week8/Q2.c")
#add_executable(Q3 "Mastery Quiz /week8/Q3.c")

#lecture week 9
#add_executable(testSize "SelfLearning/week 9/testSize.c")
#add_executable(split "SelfLearning/week 9/split.c")

#workshop week 9

#add_executable(peaks workshop/week9/peaks.c)
#add_executable(split workshop/week9/split.c)
#add_executable(split1 workshop/week9/split1.c)
#add_executable(sumdiffs workshop/week9/sumdiffs.c)

#mastery quiz week 9
#add_executable(q1 "Mastery Quiz /week9/q1.c")
#add_executable(q2 "Mastery Quiz /week9/q2.c")
#add_executable(q3 "Mastery Quiz /week9/q3.c")
#add_executable(q4 "Mastery Quiz /week9/q4.c")
#add_executable(q5 "Mastery Quiz /week9/q5.c")
#add_executable(q6 "Mastery Quiz /week9/q6.c")

#practical week 9

#add_executable(odd_evens practical/week9/odd_evens.c)
#add_executable(process_ages practical/week9/process_ages.c)
#add_executable(to_uppercase practical/week9/to_uppercase.c)
#add_executable(to_uppercase2 practical/week9/to_uppercase2.c)
#add_executable(reverse_in_place practical/week9/reverse_in_place.c)

#workshop week 10

#add_executable(q1_read_cat workshop/week10/q1_read_cat.c)
#add_executable(q2_read_cat_repeat workshop/week10/q2_read_cat_repeat.c)
#add_executable(q3_digest workshop/week10/q3_digest.c)
#add_executable(q4_digest_back workshop/week10/q4_digest_back.c)

#practical week 10

#add_executable(temperatures01 practical/week10/temperatures01.c)
#add_executable(odds_evens01 practical/week10/odds_evens01.c)
#add_executable(temperatures02 practical/week10/temperatures02.c)

#mastery quiz week 10

add_executable(q3 "workshop/week 11/q3.c")
add_executable(q4 "workshop/week 11/q4.c")
add_executable(q6 "Mastery Quiz /week10/q6.c")
add_executable(q5 "Mastery Quiz /week10/q5.c")

#workshop week 11
add_executable(q1 "workshop/week 11/q1.c")
add_executable(q2 "workshop/week 11/q2.c")
